# ROS-project

./: encoder_step.c  step.txt
Hardware_Lab/: Step.txt  drive_test.c  drive_test_pwm.c  encoder.c  pid_drive.c
code/: encoder_testAB.c  motor-test  motor_pid  motor_pid.c  motor_pid_threaded  motor_pid_threaded.c
code/unuse/: drive_test_pwm  drive_test_pwm.c  encoder-test  encoder.c  encoder_meter.c  gy-25.py  input  lidar.py  new.c  pid-test  pid.c  pid_drive.c  pid_new.c  pid_test  pid_test.c  robot_control  test.c  test_input.c  ws_step.txt
ros2_ws new/: .data  final_setup.txt  frames_2025-05-28_16.23.36.gv  frames_2025-05-28_16.32.37.gv  map_1748431394.pgm  map_1748431394.yaml  map_1748431397.yaml  rf2_o_stepup.txt
ros2_ws new/build-old/rf2o_laser_odometry/: CMakeCache.txt  CTestTestfile.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt
ros2_ws new/build-old/rf2o_laser_odometry/.cmake/api/v1/reply/: directory-.-530bb78879726595d093.json  index-2025-03-17T16-33-47-0943.json  target-rf2o_laser_odometry-bbc0746c27f5e95acfa5.json  target-rf2o_laser_odometry_uninstall-46307970a0670539091f.json
ros2_ws new/build-old/rf2o_laser_odometry/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: rf2o_laser_odometry
ros2_ws new/build-old/rf2o_laser_odometry/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ros2_ws new/frames/: frames_2025-03-14_23.33.25.gv  frames_2025-03-14_23.39.12.gv  frames_2025-03-14_23.40.15.gv  frames_2025-03-15_18.34.27.gv  frames_2025-03-15_21.51.13.gv  frames_2025-03-15_21.52.52.gv  frames_2025-03-15_22.07.15.gv  frames_2025-03-15_22.24.02.gv  frames_2025-03-16_15.32.06.gv
ros2_ws new/install/: setup.sh
ros2_ws new/install-old/: local_setup.sh
ros2_ws new/install/my_robot_description/share/my_robot_description/: package.sh  package.xml
ros2_ws new/install/my_robot_description/share/my_robot_description/launch/: robot_description.launch.py
ros2_ws new/install/my_robot_description/share/my_robot_description/urdf/: my_robot.urdf
ros2_ws new/install/rf2o_laser_odometry/share/rf2o_laser_odometry/: local_setup.sh  package.sh
ros2_ws new/install/robot_control/lib/robot_control/: robot_control
ros2_ws new/install/robot_control/share/robot_control/: package.sh  package.xml
ros2_ws new/install/rplidar_launch/share/rplidar_launch/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws new/install/slam_toolbox_launch/share/slam_toolbox_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws new/install/slam_toolbox_launch/share/slam_toolbox_launch/launch/: slam_toolbox.py
ros2_ws new/install/teleop_twist_listener/lib/teleop_twist_listener/: teleop_listener
ros2_ws new/install/teleop_twist_listener/share/ament_index/resource_index/package_run_dependencies/: teleop_twist_listener
ros2_ws new/install/teleop_twist_listener/share/teleop_twist_listener/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws new/src/my_robot_description/: setup.py  urdf_setup.txt
ros2_ws new/src/my_robot_description/urdf/: my_robot copy.urdf
ros2_ws new/src/robot_control/: CMakeLists.txt  readme.md
ros2_ws new/src/rplidar_launch/: step.txt
ros2_ws new/src/rplidar_launch/launch/: rplidar_launch.py
ros2_ws new/src/slam_toolbox_launch/: step.txt
ros2_ws new/src/slam_toolbox_launch/launch/: slam_toolbox.py
ros2_ws new/src/slam_toolbox_launch/rviz/: slam_toolbox.rviz
ros2_ws new/src/teleop_twist_listener/: package.xml  readme.md
ros2_ws new/src/teleop_twist_listener/src/: teleop_listener.c  teleop_listener_new.c
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  readme copy.md
ros2_ws/src/imu_pkg/: package.xml  setup.py
ros2_ws/src/imu_pkg/imu_pkg/: imu_node.py
ros2_ws/src/robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/robot_control/src/: subscriber_teleop_key.cpp  subscriber_teleop_key_back.cpp
ros2_ws/src/robot_urdf/: CMakeLists.txt  package.xml  readme copy.md
ros2_ws/src/robot_urdf/launch/: display.launch.py
ros2_ws/src/robot_urdf/rviz/: urdf.rviz  urdf.vcg
ros2_ws/src/robot_urdf/urdf/: 05-visual.urdf  07-physics.urdf
ros2_ws/src/teleop_twist_listener/src/: teleop_listener_back.c
src/rplidar_launch/: package.xml  setup.py
src/slam_toolbox_launch/: setup.cfg  setup.py  step.txt
src/slam_toolbox_launch/launch/: slam_toolbox.py  slam_toolbox_back.py
src/teleop_twist_listener/: CMakeLists.txt
teleop_twist_listener/src/: teleop_listener.c  teleop_listener_odom.c
