<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>ROS 2 robot_control in C</description>
  <maintainer email="gamecd51@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rcl</depend>
  <depend>rclc</depend>
  <depend>geometry_msgs</depend>
</package>
